Add email address verification during user registration (#30)